@@ -1,4 +1,4 @@
-[B]Retrospect v5.0.0.0~alpha8 - Changelog - 2019-06-12[/B]
+[B]Retrospect v5.0.0.0~beta1 - Changelog - 2019-06-19[/B]
 
 [B]Framework related[/B]
 * Py2/3: updated code to be compatible with both Python 2 and Python 3
@@ -13,6 +13,7 @@
 * Changed: some in code `import` statements that improve performance
 * Added: make the InputStream Adaptive configurable for certain channels
 * Fixed: Refresh list after changing the InputStream Adaptive settings to get rid of previous urls
+* Fixed: Always show "Channel Options -> Settings" in context menu if available for a channel
 
 [B]GUI/Settings/Language related[/B]
 * Changed: removed the "experimental" warning from the HTTP Caching settings
@@ -26,4 +27,7 @@
 * Added: Duration and Expire Date to SVT
 * Updated: AT5 and the ViaFree channels to select to use InputStream Adaptive or not
 * Updated: SVT can now select to use InputStream adaptive or not
-
+* Fixed: NPO genres would list shows as videos (Fixes #1172)
+* Added: Duration to DPlay
+* Fixed: Some DPlay items were shown as Paid, while there were not actually paid
+* Fixed: NPO genres would list shows as videos (Fixes #1172)
